[metadata]
name = vspWrap
version = 0.0.1
author = rtfcv
author_email = author@example.com
description = wrapper openvsp python api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rtfcv/vspWrap
project_urls =
    Bug Tracker = https://github.com/rtfcv/vspWrap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    openvsp

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    r4n=r4n:main
